fix: address additional review feedback
- Pin create-github-app-token to v2.0.6 SHA for supply chain security
- Pin gh CLI to 2.63.2 for consistency
- Add error annotation when opencode fails

--- a/mise.toml
+++ b/mise.toml
@@ -10,4 +10,4 @@ opencode = "0.6.0"
 postgres = "17"
 
 # Development tools
-gh = "latest"          # GitHub CLI for issue/PR management
+gh = "2.63.2"          # GitHub CLI for issue/PR management
