--- a/.github/workflows/opencode-agent.yml
+++ b/.github/workflows/opencode-agent.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Generate GitHub App Token
         id: app-token
-        uses: actions/create-github-app-token@v2
+        uses: actions/create-github-app-token@df432a3e5438882895be69815132e4adf58a3d47 # v2.0.6
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PRIVATE_KEY }}
@@ -199,6 +199,10 @@ jobs:
           set -e
 
           echo "opencode_exit=$OPENCODE_EXIT" >> $GITHUB_OUTPUT
+
+          if [ $OPENCODE_EXIT -ne 0 ]; then
+            echo "::error::OpenCode agent failed with exit code $OPENCODE_EXIT"
+          fi
 
       - name: Report Status
         if: always()
