--- a/mise.toml
+++ b/mise.toml
@@ -1,4 +1,13 @@
 [tools]
+# Core runtime and package manager
 node = "22"
-opencode = "latest"
 pnpm = "10"
+
+# AI agent CLI - pinned for supply chain security
+opencode = "1.0.200"
+
+# Database tools
+postgres = "17"
+
+# Development tools
+gh = "2.63.2"          # GitHub CLI for issue/PR management
