fix: use latest opencode version instead of non-existent 1.0.200
The version 1.0.200 doesn't exist and was causing the OpenCode agent
workflow to fail. Following the pattern from descope/shuni (which also
uses latest for most tools), this change ensures we always get the most
recent stable version of opencode.

--- a/mise.toml
+++ b/mise.toml
@@ -3,8 +3,8 @@
 node = "22"
 pnpm = "10"
 
-# AI agent CLI - pinned for supply chain security
-opencode = "1.0.200"
+# AI agent CLI
+opencode = "latest"
 
 # Development tools
 gh = "2.63.2"          # GitHub CLI for issue/PR management
