--- a/.github/workflows/opencode-agent.yml
+++ b/.github/workflows/opencode-agent.yml
@@ -63,38 +63,12 @@ jobs:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          CUSTOM_TASK: ${{ inputs.task }}
         run: |
-          # Use custom task if provided, otherwise use the standard workflow
-          if [ -n "${{ inputs.task }}" ]; then
-            PROMPT="${{ inputs.task }}"
-          else
-            PROMPT=$(cat <<'EOF'
-          You are an autonomous AI agent working on the Descope Trust Center repository.
-
-          Handle ONE task from highest to lowest priority:
-
-          1. PR REVIEWS: If there are open PRs with unresolved review comments, pick one and address all the comments. Check out the branch, read comments, make fixes, reply to comments, resolve threads, commit and push.
-
-          2. ISSUES: If no PR reviews, pick the highest priority open issue (P0 > P1 > P2 > P3 > unlabeled) without 'blocked' label. Claim it, implement the solution following AGENTS.md patterns, run checks, create PR.
-
-          Rules:
-          - Work on exactly ONE task per run
-          - Use conventional commits and proper PR descriptions
-          - Run 'pnpm typecheck && pnpm lint && (pnpm test || echo "Tests may fail in CI")' before committing
-          - Follow existing code patterns from AGENTS.md
-          - Use zod/v4, import { env } from '~/env', never suppress TS errors
-          - For PR reviews: resolve all comments in one go, don't leave partial work
-          - Always check git status and commit all changes before pushing
-          EOF
-          )
-          fi
-
           echo "🤖 Starting OpenCode agent..."
-          echo "Prompt: ${PROMPT:0:200}..."
 
-          # Run opencode with the prompt and capture exit code
           set +e
-          opencode --yes --prompt "$PROMPT"
+          npx tsx .github/scripts/run-agent.ts
           OPENCODE_EXIT=$?
           set -e
 
