--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   },
   "devDependencies": {
     "@descope-trust-center/prettier-config": "workspace:*",
+    "@opencode-ai/sdk": "latest",
     "@playwright/test": "^1.57.0",
     "@turbo/gen": "^2.5.8",
     "@types/node": "catalog:",
     "dotenv-cli": "^10.0.0",
     "prettier": "catalog:",
+    "tsx": "^4.19.2",
     "turbo": "^2.5.8",
     "typescript": "catalog:"
   },
