--- a/mise.toml
+++ b/mise.toml
@@ -3,7 +3,7 @@
 node = "22"
 pnpm = "10"
 
-# AI agent CLI
+# AI agent CLI - using "latest" for dev/CI (version 1.0.200 does not exist in mise registry)
 opencode = "latest"
 
 # Development tools
