--- a/mise.toml
+++ b/mise.toml
@@ -3,8 +3,8 @@
 node = "22"
 pnpm = "10"
 
-# AI agent CLI - pinned for supply chain security
-opencode = "1.0.200"
+# AI agent CLI - using "latest" for dev/CI (version 1.0.200 does not exist in mise registry)
+opencode = "latest"
 
 # Development tools
 gh = "2.63.2"          # GitHub CLI for issue/PR management
