--- a/.github/workflows/opencode-agent.yml
+++ b/.github/workflows/opencode-agent.yml
@@ -2,7 +2,7 @@ name: OpenCode Agent
 
 on:
   schedule:
-    - cron: "0 * * * *" # Every hour
+    - cron: "*/5 * * * *" # Every hour
   workflow_dispatch:
     inputs:
       task:
