feat: migrate email service from Resend to AWS SES with SST
- Add SST configuration with Email component for SES
- Replace Resend SDK with @aws-sdk/client-ses
- Refactor EmailService to use SES SendEmailCommand
- Update env schema: remove RESEND_API_KEY, add AWS_REGION
- Update tests to mock SES client instead of Resend

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "catalog:",
     "dotenv-cli": "^10.0.0",
     "prettier": "catalog:",
+    "sst": "^3.17.25",
     "tsx": "^4.19.2",
     "turbo": "^2.5.8",
     "typescript": "catalog:"
